--- a/src/sass/_gamefield.scss
+++ b/src/sass/_gamefield.scss
@@ -1,108 +1,117 @@
 .field {
-    width: 400px;
-    height: 400px;
-    margin: 0 auto;
-    border: 1px solid black;
-    border-radius: 10px;
-    position: relative;
-    background-color: $field-bg;
-    overflow: hidden;
+  width: 400px;
+  height: 400px;
+  margin: 0 auto;
+  border: 1px solid black;
+  border-radius: 10px;
+  position: relative;
+  background-color: $field-bg;
+  overflow: hidden;
 }
 
 .cell {
-    border: 1px solid $border;
-    border-radius: 10px;
-    position: absolute;
-    font-size: 3.5rem;
-    box-sizing: border-box;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    transition: 0.5s;
-    user-select: none;
-    background-color: $cell-bg;
-    overflow: hidden;
+  border: 1px solid $border;
+  border-radius: 10px;
+  position: absolute;
+  font-size: 3.5rem;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: 0.5s;
+  user-select: none;
+  background-color: $cell-bg;
+  overflow: hidden;
 }
 
 .leaderboard {
-    width: 400px;
-    height: 400px;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    background-color: $field-bg;
-    z-index: 10;
-    position: absolute;
-    transition: 0.5s;
+  width: 400px;
+  height: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  background-color: $field-bg;
+  z-index: 10;
+  position: absolute;
+  transition: 0.5s;
 }
 
 .date {
-    width: 100px;
-    margin-top: 30px;
-    border-top: 1px solid $border;
-    border-left: 1px solid $border;
-    border-right: 1px solid $border;
+  width: 100px;
+  margin-top: 30px;
+  border-top: 1px solid $border;
+  border-left: 1px solid $border;
+  border-right: 1px solid $border;
 }
 
 .moves {
-    width: 60px;
-    margin-top: 30px;
-    border-top: 1px solid $border;
-    border-right: 1px solid $border;
+  width: 60px;
+  margin-top: 30px;
+  border-top: 1px solid $border;
+  border-right: 1px solid $border;
 }
 
 .size {
-    width: 50px;
-    margin-top: 30px; 
-    border-top: 1px solid $border;
-    border-right: 1px solid $border;
+  width: 50px;
+  margin-top: 30px;
+  border-top: 1px solid $border;
+  border-right: 1px solid $border;
 }
 
 .time {
-    width: 50px; 
-    margin-top: 30px;
-    border-top: 1px solid $border;
-    border-right: 1px solid $border;
+  width: 50px;
+  margin-top: 30px;
+  border-top: 1px solid $border;
+  border-right: 1px solid $border;
 }
 
-.date div, .moves div, .size div, .time div {
-    border-bottom: 1px solid $border;
-    font-size: 1.6rem;
-    text-align: center;
-    padding: 5px;
+.date div,
+.moves div,
+.size div,
+.time div {
+  border-bottom: 1px solid $border;
+  font-size: 1.6rem;
+  text-align: center;
+  padding: 5px;
 }
 
 .heading-leaderboard {
-    position: absolute;
-    font-size: 2.5rem;
-    top: 0;
+  position: absolute;
+  font-size: 2.5rem;
+  top: 0;
 }
 
 .disabled {
-    transform: rotate(360deg) scale(0);
+  transform: rotate(360deg) scale(0);
 }
 
 .modal-win {
-    width: 400px;
-    height: 400px;
-    background-color: #292929;
-    opacity: 0.8;
-    font-size: 2rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    z-index: 10;
+  width: 400px;
+  height: 400px;
+  background-color: #292929;
+  opacity: 0.8;
+  font-size: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  z-index: 10;
 }
 
 .modal-win span {
-    font-size: 2.6rem;
-    color: white;
-    text-align: center;
+  font-size: 2.6rem;
+  color: white;
+  text-align: center;
 }
 
 .hide {
-    display: none;
+  display: none;
 }
 
+.end-of-game {
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 3rem;
+}
