--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;1,400&display=swap');
+
+
 * {
   padding: 0;
   margin: 0;
   font-size: 10px;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Raleway', sans-serif;
 }
 
 body {
