refactor: refactor styles and js. Removed unnecessary files

--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -7,19 +7,10 @@
   width: 100%;
   height: calc(100% - 30px);
   position: absolute;
-  background-color: rgba($color: #000000, $alpha: 0.8);
+  background-color: $black-bg;
   z-index: 1;
   animation-name: fade-in;
   animation-duration: .4s;
-}
-
-@keyframes fade-in {
-  from {
-    background-color: rgba($color: #000000, $alpha: 0);
-  }
-  to {
-    background-color: rgba($color: #000000, $alpha: 0.8);
-  }
 }
  
 .subtitle {
@@ -64,8 +55,17 @@
   width: 100%;
   height: 100%;
   position: absolute;
-  background-color: rgba($color: #000000, $alpha: 0.8);
+  background-color: $black-bg;
   z-index: 1;
   animation-name: fade-in;
   animation-duration: .4s;
+}
+
+@keyframes fade-in {
+  from {
+    background-color: rgba($color: #000000, $alpha: 0);
+  }
+  to {
+    background-color: $black-bg;
+  }
 }
