--- a/src/scss/_control-panel.scss
+++ b/src/scss/_control-panel.scss
@@ -1,7 +1,3 @@
-$button: #00AFDB;
-$button-hover: #009CC2;
-$border: rgb(118, 118, 118);
-
 .control-panel {
   display: flex;
   justify-content: space-between;
@@ -14,14 +10,14 @@ $border: rgb(118, 118, 118);
   height: 45px;
   border: 2px solid $border;
   font-size: 2.4rem;
-  text-shadow: 2px 2px rgba(0, 0, 0, 0.1);
+  text-shadow: 2px 2px $text-shadow;
   transition: .2s;
   &:hover {
     width: 250px;
     cursor: pointer;
     color: white;
-    background-color: rgba(0, 0, 0, 0.8);
-    box-shadow: 3px 3px 2px 0px rgba(34, 60, 80, 0.2);
+    background-color: $black-bg;
+    box-shadow: 3px 3px 2px 0px $button-shadow;
   }
   &:active {
     margin-top: 5px;
