--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;1,400&display=swap');
 
-
 * {
   padding: 0;
   margin: 0;
@@ -15,9 +14,12 @@ body {
 $border: rgb(118, 118, 118);
 $cell-bg: rgb(202, 199, 199);
 $field-bg: #8ed790;
+$border: rgb(118, 118, 118);
+$text-shadow: rgba(0, 0, 0, 0.1);
+$black-bg: rgba(0, 0, 0, 0.8);
+$button-shadow: rgba(34, 60, 80, 0.2);
 
 @import './header';
 @import 'gamefield';
 @import './settings';
 @import 'control-panel';
-// @import 'modal';
