--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -23,3 +23,4 @@ $button-shadow: rgba(34, 60, 80, 0.2);
 @import 'gamefield';
 @import './settings';
 @import 'control-panel';
+@import './records';
